<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialoglinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorWhiteSmoke"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="@color/ColorWhite">

        <ImageView
            android:id="@+id/dialogIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/dialongTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/warning"
            android:textColor="@color/ColorBlack"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        android:background="@color/ColorWhite">

        <TextView
            android:id="@+id/dialogContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/bluetooth"
            android:textColor="@color/ColorBlack"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogcancal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/buttonsaveselector"
            android:text="@string/cancal"
            android:textColor="@color/ColorBlack"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dialogenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/buttonsaveselector"
            android:text="@string/enter"
            android:textColor="@color/ColorBlue"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>
